syntax = "proto3";

package midnightui;

// CheckRequest can optionally specify a service to check.
// If empty, the overall server health is checked.
message CheckRequest {
  string service = 1;
}

// CheckResponse contains the serving status of the queried service.
message CheckResponse {
  // ServingStatus indicates whether a service is able to handle RPCs.
  enum ServingStatus {
    SERVING_STATUS_UNSPECIFIED = 0;
    SERVING_STATUS_SERVING = 1;
    SERVING_STATUS_NOT_SERVING = 2;
  }

  ServingStatus status = 1;
  string version = 2;
  int64 uptime_seconds = 3;
}

// HealthService provides health checking for the server and its services.
service HealthService {
  // Check returns the serving status of the server or a specific service.
  rpc Check(CheckRequest) returns (CheckResponse);
}
